Uploaded new visualization files

--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -13910,7 +13910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -13921,36 +13921,15 @@
        },
        "data": [
         {
-         "alignmentgroup": "True",
-         "hovertemplate": "x=%{x}<br>y=%{y}<extra></extra>",
-         "legendgroup": "",
-         "marker": {
-          "color": "#636efa",
-          "pattern": {
-           "shape": ""
-          }
+         "mode": "number",
+         "title": {
+          "text": "Average Number of Comments per Tally Proposal Post"
          },
-         "name": "",
-         "offsetgroup": "",
-         "orientation": "v",
-         "showlegend": false,
-         "textposition": "auto",
-         "type": "bar",
-         "x": [
-          "Average Comments"
-         ],
-         "xaxis": "x",
-         "y": [
-          46.857142857142854
-         ],
-         "yaxis": "y"
+         "type": "indicator",
+         "value": 46.857142857142854
         }
        ],
        "layout": {
-        "barmode": "relative",
-        "legend": {
-         "tracegroupgap": 0
-        },
         "template": {
          "data": {
           "bar": [
@@ -14766,29 +14745,6 @@
            "zerolinewidth": 2
           }
          }
-        },
-        "title": {
-         "text": "Average Number of Comments per Tally Proposal Post"
-        },
-        "xaxis": {
-         "anchor": "y",
-         "domain": [
-          0,
-          1
-         ],
-         "title": {
-          "text": "x"
-         }
-        },
-        "yaxis": {
-         "anchor": "x",
-         "domain": [
-          0,
-          1
-         ],
-         "title": {
-          "text": "y"
-         }
         }
        }
       }
@@ -14799,7 +14755,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
     "\n",
     "# Load datasets\n",
     "posts_df = pd.read_csv('forum_posts_data.csv')\n",
@@ -14813,8 +14769,12 @@
     "# Calculate the average number of comments received by Tally proposal posts\n",
     "average_comments = tally_posts.groupby('Topic ID').size().mean()\n",
     "\n",
-    "# Plot the average number of comments received by Tally proposal posts\n",
-    "fig = px.bar(x=['Average Comments'], y=[average_comments], title='Average Number of Comments per Tally Proposal Post')\n",
+    "# Create a counter-style visualization for the average number of comments\n",
+    "fig = go.Figure(go.Indicator(\n",
+    "    mode=\"number\",\n",
+    "    value=average_comments,\n",
+    "    title={\"text\": \"Average Number of Comments per Tally Proposal Post\"},\n",
+    "))\n",
     "fig.show()\n",
     "fig.write_html(\"Average Number of Comments Received by Tally Proposal Posts.html\")\n"
    ]
@@ -19852,7 +19812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -19875,18 +19835,12 @@
          },
          "hovertemplate": "label=%{label}<br>value=%{value}<extra></extra>",
          "labels": [
-          0,
-          1,
-          2,
-          3,
-          4
+          "Regular Users",
+          "High Trust Level Users"
          ],
          "legendgroup": "",
          "name": "",
          "pull": [
-          0.05,
-          0.05,
-          0.05,
           0.05,
           0.05
          ],
@@ -19894,11 +19848,8 @@
          "textinfo": "percent+label",
          "type": "pie",
          "values": [
-          1,
-          1,
-          1,
-          1,
-          1
+          3,
+          2
          ]
         }
        ],
@@ -20737,7 +20688,7 @@
          }
         },
         "title": {
-         "text": "Average Number of Comments by Trust Level for Tally Proposals"
+         "text": "Contribution of High Trust Level Users vs Regular Users"
         }
        }
       }
@@ -20754,6 +20705,10 @@
     "users_df = pd.read_csv('forum_users_data.csv')\n",
     "posts_df = pd.read_csv('forum_posts_data.csv')\n",
     "\n",
+    "# Define trust level categories\n",
+    "regular_users = [0, 1, 2]\n",
+    "high_trust_users = [3, 4]\n",
+    "\n",
     "# Filter posts related to Tally proposal posts\n",
     "tally_posts = posts_df[posts_df['Topic ID'].isin(tally_topic_ids)]\n",
     "\n",
@@ -20764,14 +20719,18 @@
     "# Group by trust level and calculate average number of comments\n",
     "avg_comments_by_trust_level = merged_df.groupby('Trust Level')['Username'].count() / merged_df['Trust Level'].value_counts()\n",
     "\n",
+    "# Filter the average comments for regular and high trust level users\n",
+    "avg_comments_regular = avg_comments_by_trust_level[regular_users].sum()\n",
+    "avg_comments_high_trust = avg_comments_by_trust_level[high_trust_users].sum()\n",
+    "\n",
     "# Create a pie chart to visualize average comments by trust level\n",
-    "fig = px.pie(values=avg_comments_by_trust_level.values, \n",
-    "             names=avg_comments_by_trust_level.index,\n",
-    "             title='Average Number of Comments by Trust Level for Tally Proposals',\n",
+    "fig = px.pie(values=[avg_comments_regular, avg_comments_high_trust], \n",
+    "             names=['Regular Users', 'High Trust Level Users'],\n",
+    "             title='Contribution of High Trust Level Users vs Regular Users',\n",
     "             color_discrete_sequence=px.colors.qualitative.Set3)\n",
     "\n",
     "# Customize layout\n",
-    "fig.update_traces(textinfo='percent+label', pull=[0.05] * len(avg_comments_by_trust_level))\n",
+    "fig.update_traces(textinfo='percent+label', pull=[0.05, 0.05])\n",
     "\n",
     "# Show the plot\n",
     "fig.show()\n",
